--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="app">
         <h1>WhatsApp Api</h1>
         <p>Powered By <a href="https://github.com/muhammadzakirramadhan">Muhammad Zakir Ramadhan</a></p>
-        <img alt="QRCode" id="qrcode">
+        <img alt="QRCode" id="qrcode" style="display: none;">
         <h3>Logs :</h3>
         <ul class="logs"></ul>
     </div>
@@ -25,6 +25,7 @@
             });
 
             socket.on('qr', function(src){
+                $('#qrcode').show();
                 $('#qrcode').attr('src', src);
             })
 
