--- a/index.html
+++ b/index.html
@@ -4,14 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhatsApp Api By Muhammad Zakir Ramadhan</title>
+    <style>
+        .client {
+            border: 1px solid #ccc;
+            padding: 20px;
+            box-sizing: border-box;
+            display: inline-block;
+        }
+
+        .hide {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
         <h1>WhatsApp Api</h1>
         <p>Powered By <a href="https://github.com/muhammadzakirramadhan">Muhammad Zakir Ramadhan</a></p>
-        <img alt="QRCode" id="qrcode" style="display: none;">
-        <h3>Logs :</h3>
-        <ul class="logs"></ul>
+        <div class="form-container">
+            <label for="client-id">ID</label><br>
+            <input type="text" name="client-id" id="client-id" placeholder="Masukkan client ID">
+            <br><br>
+            <label for="client-description">Deskripsi</label><br>
+            <textarea type="text" name="client-description" id="client-description" placeholder="Masukkan client Deskripsi" rows="3"></textarea>
+            <br><br>
+            <button class="add-client-btn">Tambah Client</button>
+        </div>
+        <hr>
+        <div class="client-container">
+            <div class="client hide">
+                <h3 class="title"></h3>
+                <p class="description"></p>
+                <img src="" alt="QRCode" id="qrcode">
+                <h3>Logs :</h3>
+                <ul class="logs"></ul>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
@@ -20,21 +48,63 @@
         $(document).ready(function(){
             var socket = io(); 
 
-            socket.on('message', function(msg){
-                $('.logs').append($('<li>').text(msg));
+            $('.add-client-btn').on('click', function(){
+                var clientId = $('#client-id').val();
+                var description = $('#client-description').val();     
+                var template = $('.client').first().clone().removeClass('hide').addClass(clientId) 
+                template.find('.title').html(clientId)
+                template.find('.description').html(description)
+               
+                $('.client-container').append(template)
+
+                socket.emit('create-session', {
+                    id:clientId,
+                    description:description
+                })
             });
 
-            socket.on('qr', function(src){
-                $('#qrcode').show();
-                $('#qrcode').attr('src', src);
+            socket.on('init', function(data){
+                $('.client-container .client').not(':first').remove()
+                console.log(data)
+                for(let i = 0; data.length; i++){
+                    let session = data[i]
+
+                    var clientId = session.id;
+                    var description = session.description;      
+                    var template = $('.client').first().clone().removeClass('hide').addClass(clientId) 
+                    template.find('.title').html(clientId)
+                    template.find('.description').html(description)
+                
+                    $('.client-container').append(template)
+
+                    if(session.ready){
+                        $(`.client.${session.id} .logs`).append($('<li>').text('WhatsApp Is Ready!'));
+                    } else {
+                        $(`.client.${session.id} .logs`).append($('<li>').text('Connecting....'));
+                    }
+                }                
             })
 
-            socket.on('ready', function(src){
-                $('#qrcode').hide();
+            socket.on('remove-session', function(id){
+                $(`.client.${id}`).remove()
+            })
+
+            socket.on('message', function(data){
+                $(`.client.${data.id} .logs`).append($('<li>').text(data.text));
             });
 
-            socket.on('authenticated', function(src){
-                $('#qrcode').hide();
+            socket.on('qr', function(data){
+                console.log(data.src)
+                $(`.client.${data.id} #qrcode`).attr('src', data.src);
+                $(`.client.${data.id} #qrcode`).show();
+            })
+
+            socket.on('ready', function(data){
+                $(`.client.${data.id} #qrcode`).hide();
+            });
+
+            socket.on('authenticated', function(data){
+                $(`.client.${data.id} #qrcode`).hide();
             });
         });
     </script>
